# SoftRenderer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: Camera.h  Framebuffer.h  Maths.h  Object.h  Scene.h  Shader.h  draw.h  window.h
src/: Camera.cpp  Framebuffer.cpp  Maths.cpp  Object.cpp  Scene.cpp  Shader.cpp  Window.cpp  main.cpp
src/window/: draw.cpp  window.cpp
